# CppPractice

./: .gitignore  CPPLINT.cfg  LICENSE  README.md  cpptemplate.cpp
CppQuiz/quiz_117/: main.cpp
CppQuiz/quiz_230/: main.cpp
CppQuiz/quiz_254/: main.cpp
StudyBookStdlib/: README.md
StudyOpencv/: README.md
StudyOpencv/img_encode_decode/: main.cpp
StudyOpencv/img_read_demo_1/: CMakeLists.txt  build.sh  main.cpp
StudyOpencv/img_read_demo_2/: main.cpp
StudyOpencv/img_read_show/: main.cpp
StudyOpencv/mat_demo_1/: main.cpp
StudyOpencv/mat_demo_2/: main.cpp
StudyOpencv/mat_demo_3/: CMakeLists.txt  main.cpp
StudyOpencv/mat_demo_4/: main.cpp
StudyOpencv/mat_divide_demo_1/: main.cpp
StudyOpencv/mat_multiply_demo_1/: main.cpp
StudyOpencv/mat_multiply_demo_2/: main.cpp
StudyOpencv/mat_plus_demo_1/: main.cpp
StudyOpencv/mat_plus_demo_2/: main.cpp
StudyOpencv/mat_plus_demo_3/: main.cpp
StudyOpencv/mat_subtract_demo_1/: main.cpp
StudyOpencv/rect_demo_1/: main.cpp
StudyOpencv/utils/: basic.h
StudyTemplate2nd/: README.md
StudyTemplate2nd/chapter1/: default_value01.cpp  max01.cpp
async_demos/async_demo_1/: main.cpp
async_demos/async_demo_2/: main.cpp
async_demos/async_demo_3/: main.cpp
async_demos/promise_demo_1/: build.sh  main.cpp
atomic/: README.md  atomic.cpp  is_lock_free.cpp  relaxed.cpp  release_acquire.cpp  release_consume.cpp  seq_cst.cpp  test1.cpp
atomic_compare_exchange/: build.sh  main.cpp
atomic_two_variable/: build.sh  main.cpp
boolalpha/: boolalpha.cpp
cjson_demo/: main.cpp
class_traits/demo_1/: main.cpp
class_traits/demo_2/: main.cpp
cmake_tutorial/: README.md
cmake_tutorial/Complete/: CMakeLists.txt
cmake_tutorial/Step1/: CMakeLists.txt  tutorial.cxx
cmake_tutorial/Step2/: CMakeLists.txt
cmake_tutorial/Step3/: CMakeLists.txt
cmake_tutorial/Step5/: CMakeLists.txt
cmake_tutorial/Step8/MathFunctions/: CMakeLists.txt  mysqrt.cxx
const/: const_1.cpp
const_cast/: README.md  const_cast.cpp
constexpr/: constexpr.cpp
copy_elision_demo/: README.md  cope_elision_1.cpp  copy_elision_2.cpp  main.cpp
cplusplus_primer_my/: CSalesData.h  const_reference.cpp  main.cpp  p1.11.cpp  p1.12.cpp  p1.6.cpp  p1.8.cpp  p2.13.cpp  p2.14.cpp  p2.16.cpp  p2.3.cpp  p2.35.cpp  p2.36.cpp  p2.37.cpp  p2.39.cpp  p2.40.cpp  p2.42.cpp  p3.10.cpp  p3.11.cpp  p3.12.cpp  p3.13.cpp  p3.14.cpp  p3.15.cpp  p3.17.cpp  p3.19.cpp  p3.20.cpp  p3.22.cpp  p3.23.cpp  p3.31.cpp  p3.32.cpp  p3.5.cpp  p3.6.cpp  public.h  reference.cpp  reference_to_pointer.cpp  s1.4.3_1.cpp  s1.4.4_1.cpp  s2.2.4.cpp  s2.4.cpp  s2.5.1.cpp  (+20 more)
crow_demos/crow_demo_1/: CMakeLists.txt  main.cpp
decltype/: decltype.cpp
delegate_constructor/: main.cpp
enum_class/: README.md  enum_class.cpp
eventfd_demo/: main.c
explicit/: README.md  explicit.cpp
fake_api/: Hello.h  build.sh  hello  main.cpp
fold_expression/: fold_expression.cpp
for_auto/: for_auto.cpp
function_try_demos/: main.cpp
functional_programming/: auto_capture_by_reference.cpp  auto_capture_by_value.cpp  counter.cpp  explicit_move.cpp  square.cpp  varadic_template.cpp
gcc_D/: build_with_hello.sh  build_with_hello_value.sh  main.c
getline/: getline.cpp
getmemmap/: getmemmap.cpp
getopt_demo/: README.md  getopt.md
hash_demo/: main.cpp
heap_vector/: README.md
hello_world/: main.cpp
if_constexpr/: if_constexpr.cpp
include_demos/: main.cpp
inheritance_constructor/: main.cpp
initializer_list/: after_initializer_list.cpp  before_initializer_list.cpp
ioc_demo/: ashmem.h  main.cpp
is_same/: is_same.cpp
iter_begin/: iter_begin.cpp
lambda_capture/: expression_capture.cpp  lambda_capture.cpp
libhv_demos/ws_server/: CMakeLists.txt  main.cpp
libuv_demos/: CMakeLists.txt  README.md  build.sh
libuv_demos/src/helloworld/: CMakeLists.txt  main.c
lockfree/ring/: CMakeLists.txt  README.md  main.cpp  mpmc_queue.hpp  ring.hpp  ring01.hpp  ring02.hpp  test01.cpp  test02.cpp  testmpmc.cpp
malloc/: heap.cpp  heap.h
malloc_fork/: main.cpp
multi_return/: multi_return.cpp
mutable/: mutable.cpp
my_printf/: my_printf_1.cpp  my_printf_2.cpp  my_printf_3.cpp
nullptr_demo/: nullptr.cpp
number_limit/: main.cpp
operator_string/: operator_string.cpp
option_and_result/: main.cpp
optional/: optional.cpp
pimpl/: README.md  main.cpp  widget.cpp  widget.h
placement_new/: README.md  placement_new_1.cpp  placement_new_2.cpp
producer_consumer/: main.cpp
raw_string/: raw_string.cpp
read_line_from_stdin/: main.cpp
reinterpret_cast/: README.md  reinterpret_cast.cpp
rvalue/: README.md  demo1.cpp  demo2.cpp
setjmp_demo/: main.cpp
shared_ptr/: shared_ptr.cpp  shared_ptr_1.cpp
shm_container_demo/: build.sh  build_arm.sh  clean.sh  diff.cpp  main.cpp  test1.cpp  test2.cpp
static_cast/: static_cast.cpp
std_array/: std_array.cpp
std_bind/: main.cpp
std_forward/: std_forward.cpp
std_function/: main.cpp
std_future/: std_future.cpp
std_map/: std_map.cpp
std_move/: move_string.cpp  return_rvalue.cpp  std_move.cpp
std_thread/: thread_hello.cpp  thread_mutex.cpp  thread_unique_lock.cpp
std_vector/: std_vector.cpp
string_demos/: demo1.cpp
structured_binding/: structured_binding.cpp
switch_demo/: m1.c
template_default_value/: tpl_default.cpp
template_fib/: main.cpp
underlying_type/: underlying_type.cpp
unique_ptr/: default_delete.cpp  unique_ptr.cpp  unique_ptr_1.cpp  unique_ptr_release.cpp
use_clang_in_cmake/: CMakeLists.txt  build.sh  conanfile.txt  main.cpp
use_clang_in_cmake/conan_profiles/: clang
using/: using.cpp
variable_in_if/: main.cpp
vptr/: README.md  haoel.cpp
vptr2/: main.cpp
weak_ptr/: cycle_ref.cpp  weak_ptr.cpp
(+218 files in other folders)
