CMAKE_MINIMUM_REQUIRED(VERSION 3.13.1)

PROJECT(helloworld)

ADD_EXECUTABLE(${PROJECT_NAME} main.c)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
  ${libuv-1.47.0_INC}
)

TARGET_LINK_DIRECTORIES(${PROJECT_NAME} PRIVATE
  ${libuv-1.47.0_LIB}
)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
  BUILD_WITH_INSTALL_RPATH FALSE
  LINK_FLAGS
  "-pthread -Wl,-rpath-link=${CONAN_RUNTIME},-rpath-link=${libuv-1.47.0_LIB}"
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
  uv
)
